# FALCONBOT

./: frames_2026-01-17_17.45.48.gv  frames_2026-01-18_19.32.58.gv  frames_2026-01-28_15.06.38.gv
src/AutoFrontierSearch_ros2-humble/src/frontier_exploration/: setup.py
src/AutoFrontierSearch_ros2-humble/src/frontier_exploration/frontier_exploration/: exploration_node.py
src/ldlidar_stl_ros2/launch/: ld19.launch.py
src/ldlidar_stl_ros2/src/: demo.cpp
src/parking/: CMakeLists.txt  package.xml  setup.py
src/parking/config/: ekf.yaml  follow_dynamic.xml  my_nav2_params.yaml  my_slam_params.yaml
src/parking/launch/: aruco_tracker.launch.py  camera.launch.py  mission.launch.py  mission.launchwithCam.py
src/parking/parking/: box_estimator.py  mission_controller.py  rectified_parking.py  rectified_parking_default.py  scan_republisher.py
src/parking/src/: scan_republisher.cpp
src/rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2DNode.hpp
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
